--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -13,4 +13,6 @@
 @import './components/button';
 @import './components/card';
 @import './components/form';
+@import './components/footer';
 
+@import '~aos/dist/aos.css'
