Media query fix

--- a/src/assets/sass/layout/_grid.scss
+++ b/src/assets/sass/layout/_grid.scss
@@ -12,6 +12,10 @@
     &--small {
         max-width: $container-width-sm;
     }
+
+    @include laptop {
+        max-width: 1000px;
+    }
 }
 
 .container--flex {
