--- a/src/assets/sass/base/_typograhy.scss
+++ b/src/assets/sass/base/_typograhy.scss
@@ -27,7 +27,7 @@ p {
     color: $secondary-color;
 }
 
-.text {
+.paragraph {
     width: 100%;
     max-width: 600px;
     word-break: break-word;
