--- a/src/assets/sass/components/_button.scss
+++ b/src/assets/sass/components/_button.scss
@@ -1,7 +1,7 @@
 .btn {
     display: inline-block;
     min-width: 160px;
-    padding: 0.5rem 1.8rem;
+    padding: 0.75rem 2rem;
     border-radius: $border-default;
     background-color: $primary-color;
     color: #fff;
@@ -26,5 +26,15 @@
         &:hover {
             color: $primary-hover-color;
         }
+
+        .btn-icon {
+            color: $primary-color;
+            margin-right: $gutter / 2;
+        }
     }
+}
+
+.btn-icon {
+    margin-right: $gutter / 2;
+    transition: all 0.3s ease;
 }
