--- a/src/assets/sass/layout/_home.scss
+++ b/src/assets/sass/layout/_home.scss
@@ -1,3 +1,25 @@
+.intro {
+    width: 100%;
+    padding: 6rem 0;
+
+    @include mobile {
+        padding: 2rem 0;
+    }
+
+    .title {
+        margin-bottom: $container-gutter;
+    }
+}
+
+.intro__content {
+    width: 100%;
+    max-width: 600px;
+    word-break: break-word;
+
+    &+.btn {
+        margin-top: 2rem; 
+    }
+}
 .visual {
     position: relative;
     // padding-bottom: 70%;
@@ -11,23 +33,6 @@
 
     @include mobile {
         padding-top: 60%;
-    }
-}
-
-.references__brands {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
-
-    img {
-        max-width: 120px;
-        margin-left: 4rem;
-
-        &:first-of-type {
-            margin-left: 0;
-        }
     }
 }
 
@@ -87,4 +92,25 @@
     @include mobile {
         margin: 0;
     }
+}
+
+
+.references__brands {
+    margin-top: 60px;
+
+    @include mobile {
+        margin-top: $gutter;
+    }
+}
+
+.swiper-wrapper {
+    align-items: center;
+    transition-timing-function: linear;
+}
+
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
 }
