--- a/src/assets/sass/components/_button.scss
+++ b/src/assets/sass/components/_button.scss
@@ -10,11 +10,20 @@
     text-transform: uppercase;
     transition: all 1s ease;
 
+    &:hover {
+        text-decoration: none;
+    }
+
     &--primary {
         background-color: $primary-color;
 
         &:hover {
             background-color: $primary-hover-color;
+            color: white;
+
+            .btn-icon {
+                margin-right: 5px;
+            }
         }
     }
 
@@ -25,6 +34,12 @@
 
         &:hover {
             color: $primary-hover-color;
+
+            .btn-icon {
+                margin-left: 5px;
+                margin-right: 5px;
+                color: $primary-hover-color;
+            }
         }
 
         .btn-icon {
